Assertion failure writing to journal file

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Critical - P2
    • 2.0.5, 2.1.1
    • Affects Version/s: 2.0.2, 2.0.4, 2.1.0, 2.1.1
    • Component/s: Stability, Storage
    • None
    • Environment:
      EC2, EBS
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Thu Mar 29 17:45:51 [journal] write fails written:8192 len:16384 buf:ยช$ errno:0 Success
      Thu Mar 29 17:45:51 [journal] error exception in dur::journal error appending to file 5 errno:0 Success
      Thu Mar 29 17:45:51 [journal] dbexception in groupCommitLL causing immediate shutdown: 13515 error appending to file 5 errno:0 Success
      Thu Mar 29 17:45:51 dur1
      Thu Mar 29 17:45:51 Got signal: 6 (Aborted).

      Thu Mar 29 17:45:51 Backtrace:
      0xa8d669 0x7fbb99d58900 0x7fbb99d58885 0x7fbb99d5a065 0x881427 0x7616bb 0x76192d 0x7620bb 0xaa80b0 0x7fbb9a86e7f1 0x7fbb99e0b92d
      mongod(_ZN5mongo10abruptQuitEi+0x399) [0xa8d669]
      /lib64/libc.so.6(+0x32900) [0x7fbb99d58900]
      /lib64/libc.so.6(gsignal+0x35) [0x7fbb99d58885]
      /lib64/libc.so.6(abort+0x175) [0x7fbb99d5a065]
      mongod(_ZN5mongo10mongoAbortEPKc+0x47) [0x881427]
      mongod(_ZN5mongo3dur27groupCommitWithLimitedLocksEv+0xcb) [0x7616bb]
      mongod() [0x76192d]
      mongod(_ZN5mongo3dur9durThreadEv+0x10b) [0x7620bb]
      mongod(thread_proxy+0x80) [0xaa80b0]
      /lib64/libpthread.so.0(+0x77f1) [0x7fbb9a86e7f1]
      /lib64/libc.so.6(clone+0x6d) [0x7fbb99e0b92d]

      Logstream::get called in uninitialized state
      Thu Mar 29 17:45:51 ERROR: Client::shutdown not called: journal

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Jeffrey Yemin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: