SERVER-5449: It's not an error for the write() syscall to return a non-negative value less than len.

Instead of treating it as an error for write() to return a non-negative value less than len,
keep writing in a loop until the entire buffer has been written to the log file.